Fixes search clear button on firefox

--- a/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
+++ b/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
@@ -595,20 +595,21 @@ input[type="search"]::-webkit-search-cancel-button {
         background-size: 14px;
         height: 14px;
         width: 14px;
-        padding: 0;
+        padding: 4px;
         z-index: 100;
         cursor: pointer;
         position: relative;
+        margin-right: -14px;
         right: 35px;
     }
     #search-box:not(:valid) ~ input[type="reset"] {
-        display: none;
+        visibility: hidden;
     }
-    #search-box:valid ~ #search-button, 
+    /* #search-box:valid ~ #search-button, 
     #search-box:valid ~ #genomic-filter-btn {
         position: relative;
-        right: 18px;
-    }
+        right: 14px;
+    } */
 }
 
 /* Safari 9+ (no impact to Chrome or Firefox)
@@ -625,3 +626,18 @@ remove when above bug is fixed */
 }
 
 /************************* ENDS Search X ******************************/
+
+/************************* Start Visualization ******************************/
+
+.image-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.image-container button {
+    position: relative;
+    left: -20px;
+}
